apps/garage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  labels:
    app: garage
spec:
  type: ClusterIP
  selector:
    app: garage
  ports:
    - name: s3
      port: 3900
      targetPort: 3900
      protocol: TCP
    - name: web
      port: 3902
      targetPort: 3902
      protocol: TCP
    - name: admin
      port: 3903
      targetPort: 3903
      protocol: TCP
